fix(ProductPannel): fix the gap between list items, afecting globally

--- a/src/components/Contacts/index.css
+++ b/src/components/Contacts/index.css
@@ -5,7 +5,7 @@
     margin: 0;
 }
 
-li {
+.contacts-wrapper li {
     justify-content: center;
     align-content: center;
 
