--- a/src/components/ImageFrame/index.css
+++ b/src/components/ImageFrame/index.css
@@ -4,15 +4,16 @@
     justify-content: end;
     position: relative;
 
+    aspect-ratio: 10 / 16;
     width: 100%;
-    height: 10em;
 
+    margin: 0;
     border: 1px solid black;
 }
 
 .frame-image {
     position: absolute;
-    object-fit: contain;
+    object-fit: cover;
 
     width: 100%;
     height: 100%;
