--- a/src/components/ProductPannel/index.css
+++ b/src/components/ProductPannel/index.css
@@ -2,14 +2,16 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+
+    width: 100%;
+
     padding: 0;
     margin: 0;
-    gap: 1rem;
+    gap: 0.2em;
 }
 
 .product-pannel li {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex: 1;
 }
